Fix #125134 #124971: EEVEE: Overlapping samplers in World shader